# geekclaw

./: .gitignore  .golangci.yaml  .goreleaser.yaml  CLAUDE.md  Cargo.toml  DEFERRED.md  TASKS.md  config.example.yaml  geekclaw.py  go.mod  go.sum  manage.py
.github/workflows/: release.yml
crates/: README.md
crates/agent/: Cargo.toml  README.md
crates/agent/src/: context.rs  lib.rs  loop_core.rs
crates/agent/tests/: integration.rs
crates/bus/: Cargo.toml  README.md
crates/bus/src/: lib.rs  types.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: error.rs  lib.rs
crates/cron/: Cargo.toml  README.md
crates/cron/src/: error.rs  lib.rs  service.rs  store.rs  types.rs
crates/geekclaw/: Cargo.toml  README.md
crates/geekclaw/src/: main.rs
crates/logger/: Cargo.toml  README.md
crates/logger/src/: lib.rs
crates/memory/: Cargo.toml  README.md
crates/memory/benches/: jsonl_bench.rs
crates/memory/src/: error.rs  jsonl.rs  lib.rs  types.rs
crates/plugin/: Cargo.toml  README.md
crates/plugin/src/: config.rs  error.rs  lib.rs  process.rs  transport.rs  wire.rs
crates/providers/: Cargo.toml  README.md
crates/providers/src/: cooldown.rs  error_classifier.rs  external.rs  fallback.rs  lib.rs  model_ref.rs  openai_compat.rs  types.rs
crates/tools/: Cargo.toml  README.md
crates/tools/src/: lib.rs  registry.rs
crates/tools/src/builtin/: cron_tool.rs  filesystem.rs  mod.rs  shell.rs
docs/: architecture.md  call-graph.md  data-flow.md  go-python-protocol.md  json-rpc-protocol.md  overview.md  skills-system.md
docs/modules/: module-agent.md  module-channels.md  module-cron.md  module-health.md  module-interactive.md  module-memory.md  module-plugins.md  module-providers.md  module-tools.md
geekclaw/: main.go  main_test.go
geekclaw/agent/: cmd_helpers_test.go  commands.go  context.go  context_cache_test.go  context_test.go  instance.go  instance_test.go  llm.go  loop.go  loop_media.go  loop_test.go  ls_helpers_test.go  memory.go  mock_provider_test.go  registry.go  registry_test.go  session.go  skills_context.go  summarize.go  syncmap.go  thinking.go  thinking_test.go
geekclaw/bus/: bus.go  types.go
geekclaw/channels/: base.go  base_test.go  constants.go  dispatch.go  errors.go  errors_test.go  errutil.go  errutil_test.go  identity.go  identity_test.go  init.go  interfaces.go  interfaces_command_test.go  janitor.go  manager.go  manager_test.go  media.go  placeholder.go  rate_limiter.go  registry.go  split.go  split_test.go  webhook.go
geekclaw/commands/: builtin.go  cmd_check.go  cmd_clear.go  cmd_compact.go  cmd_edit.go  cmd_exec.go  cmd_help.go  cmd_interactive.go  cmd_list.go  cmd_mode.go  cmd_show.go  cmd_start.go  cmd_stop.go  cmd_switch.go  cmd_usage.go  definition.go  executor.go  handler_agents.go  provider.go  registry.go  request.go  runtime.go
geekclaw/config/: config.go  config_test.go  defaults.go  env.go  migration.go  migration_test.go  model.go  model_config_test.go  model_resolution.go  version.go
geekclaw/cron/: service.go
geekclaw/fileutil/: file.go  file_test.go
geekclaw/health/: server.go
geekclaw/interactive/: manager.go  types.go
geekclaw/internal/: config.go  config_test.go
geekclaw/internal/agent/: command.go  interactive.go  interactive_help.go  shell.go
geekclaw/internal/cron/: add.go  command.go  disable.go  enable.go  helpers.go  list.go  remove.go
geekclaw/internal/gateway/: command.go  command_test.go  cron.go  gateway.go
geekclaw/internal/skills/: command.go  install.go  install_test.go  installbuiltin_test.go  list.go  remove.go  search.go  show.go
geekclaw/internal/status/: command.go  command_test.go  helpers.go
geekclaw/internal/version/: command.go
geekclaw/logger/: logger.go
geekclaw/mcp/: manager.go  manager_test.go
geekclaw/media/: store.go
geekclaw/memory/: jsonl.go  jsonl_test.go  migration.go  migration_test.go  store.go
geekclaw/plugin/: config.go  log.go  process.go  process_test.go  services.go  transport.go  wire.go
geekclaw/providers/: antigravity_api.go  cooldown.go  error_classifier.go  factory_provider.go  factory_provider_test.go  factory_test.go  fallback.go  model_ref.go  provider.go  toolcall_utils.go  types.go
geekclaw/providers/protocoltypes/: types.go
geekclaw/routing/: agent_id.go  route.go  route_test.go  session_key.go  session_key_test.go
geekclaw/session/: jsonl_backend.go  jsonl_backend_test.go  session_store.go
geekclaw/skills/: clawhub_registry.go  clawhub_registry_test.go  installer.go  loader.go  loader_test.go  registry.go  registry_test.go
geekclaw/tasks/: queue.go  queue_test.go
geekclaw/tools/: base.go  cron.go  cron_test.go  edit.go  edit_test.go  filesystem.go  filesystem_test.go  mcp_tool.go  registry.go  registry_test.go  result.go  search_tool.go  send_file.go  send_file_test.go  shell.go  shell_process_unix.go  shell_process_windows.go  shell_test.go  spawn.go  subagent.go  subagent_tool_test.go  toolloop.go  types.go  web.go  web_test.go
geekclaw/utils/: bm25.go  bm25_test.go  http_retry.go  http_retry_test.go  media.go  skills.go  string.go  zip.go
geekclaw/voice/: transcriber.go
templates/configs/: config.example.yaml
