[workspace]
resolver = "2"
members = [
    "crates/bus",
    "crates/memory",
    "crates/cron",
    "crates/providers",
    "crates/plugin",
    "crates/tools",
    "crates/agent",
    "crates/config",
    "crates/logger",
    "crates/geekclaw",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["GeekClaw contributors"]

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# http
reqwest = { version = "0.12", features = ["json"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# error handling
thiserror = "2"
anyhow = "1"

# utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec"] }

# workspace crates
geekclaw-bus = { path = "crates/bus" }
geekclaw-memory = { path = "crates/memory" }
geekclaw-cron = { path = "crates/cron" }
geekclaw-providers = { path = "crates/providers" }
geekclaw-plugin = { path = "crates/plugin" }
geekclaw-tools = { path = "crates/tools" }
geekclaw-agent = { path = "crates/agent" }
geekclaw-config = { path = "crates/config" }
geekclaw-logger = { path = "crates/logger" }
