[package]
name = "geekclaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
geekclaw-bus = { workspace = true }
geekclaw-memory = { workspace = true }
geekclaw-providers = { workspace = true }
geekclaw-tools = { workspace = true }
geekclaw-config = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
