[package]
name = "geekclaw-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
geekclaw-providers = { workspace = true }

[[bench]]
name = "jsonl_bench"
harness = false

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
