[package]
name = "geekclaw-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
regex = "1"
geekclaw-plugin = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
