[package]
name = "geekclaw-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
geekclaw-providers = { workspace = true }
regex = "1"

[dev-dependencies]
tempfile = "3"
